# HF-RL-Course

./: .gitignore  README.md  environment.yml  install.sh
Unit8-PPO/: environment.yml  ppo.py  pyproject.toml  requirements.txt
Unit8-PPO/runs/CartPole-v1__ppo__1__1719171051/: events.out.tfevents.1719171051.lambda-minerva.4027259.0
Unit8-PPO/runs/CartPole-v1__ppo__1__1719171074/: events.out.tfevents.1719171074.lambda-minerva.4027387.0
Unit8-PPO/runs/CartPole-v1__ppo__1__1719171142/: events.out.tfevents.1719171142.lambda-minerva.4027539.0
Unit8-PPO/runs/CartPole-v1__ppo__1__1719171180/: events.out.tfevents.1719171180.lambda-minerva.4028273.0
Unit8-PPO/runs/CartPole-v1__ppo__1__1719171880/: events.out.tfevents.1719171880.lambda-minerva.4029973.0
Unit8-PPO/runs/CartPole-v1__ppo__1__1719171941/: events.out.tfevents.1719171941.lambda-minerva.4030413.0
Unit8-PPO/runs/CartPole-v1__ppo__1__1719339234/: events.out.tfevents.1719339234.lambda-minerva.17548.0
Unit8-PPO/runs/CartPole-v1__ppo__1__1719339254/: events.out.tfevents.1719339254.lambda-minerva.17693.0
Unit8-PPO/runs/CartPole-v1__ppo__1__1719339411/: events.out.tfevents.1719339411.lambda-minerva.19927.0
Unit8-PPO/runs/CartPole-v1__ppo__1__1719339497/: events.out.tfevents.1719339501.lambda-minerva.20483.0
Unit8-PPO/runs/CartPole-v1__ppo__1__1719339883/: events.out.tfevents.1719339885.lambda-minerva.21926.0
Unit8-PPO/runs/CartPole-v1__ppo__1__1719339938/: events.out.tfevents.1719339941.lambda-minerva.22433.0
Unit8-PPO/wandb/: latest-run
Unit8-PPO/wandb/run-20240625_141819-4ooonyj3/: run-4ooonyj3.wandb
(+72 files in other folders)
